Finished features of hw2

--- a/homework2/package.json
+++ b/homework2/package.json
@@ -4,12 +4,13 @@
   "description": "Lab 3",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "kill $(pgrep node) ; node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3"
   }
 }
