--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "stop": "kill $(pgrep node)",
     "dev": "nodemon --ignore app/ server.js & webpack-dev-server --progress &",
     "install": "webpack --progress --config ./webpack.production.config.js",
-    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
+    "start": "node server.js"
   }
 }
